<resources>
    <string name="app_name">Swing</string>
    <string name="language_en_us" translatable="false">"English"</string>
    <string name="language_zh_tw" translatable="false">"繁體中文"</string>
    <string name="language_zh_cn" translatable="false">"简体中文"</string>
    <string name="language_ru" translatable="false">"русский"</string>
    <string name="language_es" translatable="false">"español"</string>
    <string name="language_ja" translatable="false">"日本語"</string>
    <string name="activity_main_synchronize">Sync</string>
    <string name="activity_main_wait">Please Wait&#8230;</string>
    <string name="title_boot">Boot</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_photo">Photo</string>
    <string name="title_profile">Profile</string>
    <string name="title_option">Option</string>
    <string name="title_password">Password</string>
    <string name="title_request_from">Request From</string>
    <string name="title_request_to">Send Requests To</string>
    <string name="title_search_device">Search Device</string>
    <string name="title_sync">Sync</string>
    <string name="calendar_alarm_agenda">Agenda</string>
    <string name="calendar_alarm_clock">Alarm Clock</string>
    <string name="calendar_alarm_morning">Morning Routine</string>
    <string name="calendar_alarm_bed">Bed Time Routine</string>
    <string name="calendar_alarm_activities">Activity</string>
    <string name="calendar_event_creator">Creator</string>
    <string name="calendar_event_assign">Assign To</string>
    <string name="calendar_event_event">Select Event</string>
    <string name="calendar_event_start">Start</string>
    <string name="calendar_event_end">End</string>
    <string name="calendar_event_color">Color Label</string>
    <string name="calendar_event_repeat">Repeat</string>
    <string name="calendar_event_description">Description</string>
    <string name="calendar_event_todo_list">To Do List</string>
    <string name="calendar_event_save">Save</string>
    <string name="calendar_event_advance">Advance</string>
    <string name="calendar_event_please_select_event">Please select event</string>
    <string name="calendar_main_today_schedule">Today\'s Schedule</string>
    <string name="calendar_main_monthly_schedule">Monthly Schedule</string>
    <string name="calendar_main_no_incoming_event">No Event</string>
    <string name="calendar_month_sync">Sync Now</string>
    <string name="calendar_todo_save">Save</string>
    <string name="calendar_todo_processing">Processing</string>
    <string name="calendar_todo_wait">Please Wait&#8230;</string>
    <string name="dashboard_chart_indoor">Indoor</string>
    <string name="dashboard_chart_outdoor">Outdoor</string>
    <string name="dashboard_chart_today">Today</string>
    <string name="dashboard_chart_this_week">This Week</string>
    <string name="dashboard_chart_this_month">This Month</string>
    <string name="dashboard_chart_this_year">This Year</string>
    <string name="dashboard_chart_message_below">Don\'t Give Up. You Can Do This!</string>
    <string name="dashboard_chart_message_almost">One More Time. You Are Almost There!</string>
    <string name="dashboard_chart_message_excellent">Woohoo! You\'ve Reached Your Goal!</string>
    <string name="dashboard_chart_steps">Steps</string>
    <string name="dashboard_main_message">Would You Like to Sync Now?</string>
    <string name="dashboard_main_yes">Yes, Please</string>
    <string name="dashboard_main_dashboard">No, Go to Dashboard</string>
    <string name="dashboard_main_another">Sync Another Watch</string>
    <string name="dashboard_main_no_device">You have not bind device yet.</string>
    <string name="dashboard_emotion_hello">How Are You Doing\nToday?</string>
    <string name="dashboard_emotion_excellent">Excellent!</string>
    <string name="dashboard_emotion_almost">Almost There!</string>
    <string name="dashboard_emotion_below">Below Average!</string>
    <string name="dashboard_progress_searching">Searching\nfor your\nWatch</string>
    <string name="dashboard_progress_found">Found\nYour\nWatch</string>
    <string name="dashboard_progress_sync_now">Sync Now</string>
    <string name="dashboard_progress_syncing">Syncing</string>
    <string name="dashboard_progress_completed">Sync\nCompleted</string>
    <string name="dashboard_progress_dashboard">Go to Dashboard</string>
    <string name="dashboard_progress_not_found">We can\'t\nfind your\nWatch!</string>
    <string name="dashboard_progress_again">Try Again</string>
    <string name="dashboard_progress_last">Go to Last Synced Data</string>
    <string name="dashboard_progress_server_not_reach">Can\'t Reach Server!</string>
    <string name="dashboard_progress_enable_gps">Please enable your GPS?</string>
    <string name="dashboard_request_request">Request Access</string>
    <string name="dashboard_add_watch">Add a watch</string>
    <string name="dashboard_request_profile">Go to Profile</string>
    <string name="dashboard_request_process">Processing</string>
    <string name="dashboard_request_waiting">Please Wait&#8230;</string>
    <string name="dashboard_request_pending">Request Pending.\nAwaiting Responses</string>
    <string name="dashboard_request_no_data">You Don\'t Have any\nData yet</string>
    <string name="dashboard_request_owner">%s\'s Watch</string>
    <string name="dashboard_watch_message">Please Select Your\nSwing Watch</string>
    <string name="device_battery">Battery</string>
    <string name="device_searching">Searching&#8230;</string>
    <string name="device_not_found">Not Found</string>
    <string name="device_no_watch">You are not Connected to Any Device Yet</string>
    <string name="device_owner">%s\'s Watch</string>
    <string name="photo_clip_cancel">Cancel</string>
    <string name="photo_clip_take_photo">Use Photo</string>
    <string name="profile_added_added">Added</string>
    <string name="profile_added_successfully">We\'ve Successfully Added Your\nSwing Watch</string>
    <string name="profile_added_profile">Set up Your Profile</string>
    <string name="profile_editor_first_name">First Name</string>
    <string name="profile_editor_last_name">Last Name</string>
    <string name="profile_editor_phone">Phone Number</string>
    <string name="profile_editor_mail_address">Mail Address</string>
    <string name="profile_editor_address1">Address 1</string>
    <string name="profile_editor_address2">Address 2</string>
    <string name="profile_editor_city">City</string>
    <string name="profile_editor_zip">Zip</string>
    <string name="profile_editor_processing">Processing</string>
    <string name="profile_editor_wait">Please Wait</string>
    <string name="profile_editor_avatar_failed">Update Failed</string>
    <string name="profile_kid_name">Name</string>
    <string name="profile_kid_remove">Remove</string>
    <string name="profile_kid_processing">Processing</string>
    <string name="profile_kid_wait">Please Wait&#8230;</string>
    <string name="profile_kid_name_not_blank">Kid Name is Blank</string>
    <string name="profile_main_hosting">My Hosting Watch</string>
    <string name="profile_main_shared">Watch shared with Me</string>
    <string name="profile_main_request_to">You\'ve Sent Request to</string>
    <string name="profile_main_request_from">You\'ve Received %d Request From</string>
    <string name="profile_option_account">Account</string>
    <string name="profile_option_kid">Edit Your Kid\'s Profile</string>
    <string name="profile_option_password">Reset Password</string>
    <string name="profile_option_logout">Logout</string>
    <string name="profile_option_about">About</string>
    <string name="profile_option_contact_us">Contact Us</string>
    <string name="profile_option_privacy_policy">Privacy Policy</string>
    <string name="profile_option_manual">User Manual</string>
    <string name="profile_option_version">Version</string>
    <string name="profile_password_current">Current Password</string>
    <string name="profile_password_new">New Password</string>
    <string name="profile_password_again">New Password, Again!</string>
    <string name="profile_reset_password_confirmation">Are you sure you want to reset your password?</string>
    <string name="profile_reset_password_note">Please check your email at %s for the link to reset your password. This link will expire in 24 hours.</string>
    <string name="profile_registered_registered">This Watch Has\nBeen Registered</string>
    <string name="profile_registered_request_access">Request Access</string>
    <string name="profile_registered_contact_us">Contact Us</string>
    <string name="profile_registered_processing">Processing</string>
    <string name="profile_registered_wait">Please Wait&#8230;</string>
    <string name="profile_request_from_processing">Processing</string>
    <string name="profile_request_from_wait">Please Wait</string>
    <string name="profile_request_from_count">You Have %d Requests</string>
    <string name="profile_request_to_mail">Search User\'s Email</string>
    <string name="profile_request_to_users">User</string>
    <string name="profile_request_to_others">Request Access to Others</string>
    <string name="profile_request_to_send">Send</string>
    <string name="profile_request_to_cancel">Cancel</string>
    <string name="profile_request_to_processing">Processing</string>
    <string name="profile_request_to_wait">Please Wait&#8230;</string>
    <string name="profile_search_searching">Searching</string>
    <string name="profile_search_mac_failed">Search MAC failed</string>
    <string name="profile_select_watch">Please Select\nYour Swing Watch</string>
    <string name="profile_share_save">Save</string>
    <string name="profile_share_who">Select Swing Watch to\nShare with %s</string>
    <string name="profile_sorry_sorry">Sorry!</string>
    <string name="profile_sorry_message">We Couldn’t Find Your Swing Watch. Please\nMake Sure Your Watch Is Fully Charged</string>
    <string name="profile_sorry_again">Search Again</string>
    <string name="profile_sorry_others">Request Access to Others</string>
    <string name="profile_sorry_contact_us">Contact Us</string>
    <string name="signup_account_mail">Email</string>
    <string name="signup_account_password">Password</string>
    <string name="signup_account_login_failed">Login Failed</string>
    <string name="signup_account_processing">Processing</string>
    <string name="signup_account_wait">Please Wait&#8230;</string>
    <string name="signup_language_message">Please Select\nYour Language</string>
    <string name="signup_language_select">Select</string>
    <string name="signup_login_login">Sign Up/ Login</string>
    <string name="signup">Sign Up</string>
    <string name="signup_login_or">or</string>
    <string name="signup_login_facebook">Login with Facebook</string>
    <string name="signup_login_google">Login with Google</string>
    <string name="signup_profile_first_name">First Name</string>
    <string name="signup_profile_last_name">Last Name</string>
    <string name="signup_profile_phone_number">Phone Number</string>
    <string name="signup_profile_zip_code">Zip Code</string>
    <string name="signup_profile_processing">Processing</string>
    <string name="signup_profile_wait">Please Wait&#8230;</string>
    <string name="signup_profile_login_failed">Login Failed</string>
    <string name="signup_profile_update_failed">Update failed</string>
    <string name="signup_profile_avatar_failed">Update Failed</string>
    <string name="signup_profile_next">Next</string>
    <string name="signup_profile_done">Done</string>
    <string name="watch_added_added">Added</string>
    <string name="watch_added_message">We\'ve Successfully Added Your\nSwing Watch</string>
    <string name="watch_added_profile">Set up Your Profile</string>
</resources>