<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/textview_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/profile_sorry_sorry" />

    <TextView
        style="@style/textview_hint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/profile_sorry_message" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <com.kidsdynamic.swing.androidswingapp.ViewSponge
            android:id="@+id/profile_sorry_sponge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:shrinkWidth="0.7" />

        <Button
            android:id="@+id/profile_sorry_search"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_alignEnd="@+id/profile_sorry_sponge"
            android:layout_alignStart="@+id/profile_sorry_sponge"
            android:text="@string/profile_sorry_again" />

        <Button
            android:id="@+id/profile_sorry_request"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_sorry_search"
            android:layout_marginBottom="10dp"
            android:layout_alignEnd="@+id/profile_sorry_sponge"
            android:layout_alignStart="@+id/profile_sorry_sponge"
            android:text="@string/profile_sorry_others" />

        <Button
            android:id="@+id/profile_sorry_contact"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_sorry_request"
            android:layout_marginBottom="10dp"
            android:layout_alignEnd="@+id/profile_sorry_sponge"
            android:layout_alignStart="@+id/profile_sorry_sponge"
            android:text="@string/profile_sorry_contact_us" />

    </RelativeLayout>
</LinearLayout>